--- a/index.html
+++ b/index.html
@@ -775,7 +775,11 @@
                 </div>
               </li>
             </ul>
+            
   
+          </div>
+          <div style="display:flex; justify-content: center;" class="mt-30 mb-20">
+            <a class="button medium thin hover-dark" target="_blank" href="https://www.blogger.com/blog/posts/3970408229552422395?hl=en">TOUCH ME</a>
           </div>
         </div>
         
